Fixed z-index mistake in Auth.css page

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -94,9 +94,6 @@ body {
 }
 
 @media (max-width: 600px) {
-  body .menu-icon{
-    overflow-y: hidden;
-  }
   .menu-icon {
     display: block;
     cursor: pointer;
